changed font family; animated about section; added text to footer; fixed footer tooltip spacing

--- a/src/styling/about.css
+++ b/src/styling/about.css
@@ -11,6 +11,25 @@
 .about-sect-1 { 
     display: flex;
     justify-content: center;
+    /* transform-box: view-box; */
+    /* transition: 1s all ease; */
+    animation: 2s ease-out forwards fadein;
+    overflow-y: hidden;
+
+    /* spinning animation styling */
+    /* position: relative;
+    height: 350px; */
+}
+
+@keyframes fadein {
+    from {
+        /* transform: translateY(50px); */
+        opacity: 0;
+    }
+    to {
+        /* transform: translateY(0); */
+        opacity: 1;
+    }
 }
 
 .headshot {
@@ -18,6 +37,12 @@
     flex-basis: 20%;
     display: flex;
     justify-content: flex-end;
+
+    /* spinning animation styling */
+    /* margin: 2rem;
+    flex-basis: 40%;
+    display: flex;
+    justify-content: flex-end; */
 }
 
 .headshot img {
@@ -25,7 +50,41 @@
     height: 300px;
     object-fit: cover;
     border-radius: 50%;
+    
+    /* spinning animation styling */
+    /* width: 250px;
+    height: 250px;
+    object-fit: cover;
+    border-radius: 50%;
+    transition: all 1s ease;
+    position: absolute;
+    left: 0;
+    top: 3rem; */
+
+    /* left: 15%;
+    animation: spin 1000ms linear infinite, moveLeftToRight 5s linear infinite; */
+    
 }
+
+/* spinning animation styling */
+/* @keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes moveLeftToRight {
+    0% {
+        left: -100px;
+    }
+    100% {
+        left: 100%;
+    }
+} */
+
 
 .blurb {
     flex-basis: 40%;
@@ -34,7 +93,44 @@
     flex-direction: column;
     padding: 2rem;
     box-sizing: border-box;
+    align-items: flex-start;
 }
+
+.blurb h1 {
+    margin: 0;
+}
+
+.blurb h3 {
+    line-height: 1.5rem;
+}
+
+/* typewriter animation */
+/* .blurb h1 {
+    overflow: hidden;
+    white-space: nowrap;
+    border-right: .15em solid transparent;
+    margin: 0 auto;
+    animation: typing 2.5s steps(40, end), blink-caret .5s step-end 5;
+} */
+
+/* typewriter animation */
+/* @keyframes typing {
+    from {
+        width: 0;
+    }
+    to {
+        width: 100%;
+    }
+}
+
+@keyframes blink-caret {
+    from, to {
+        border-color: transparent;
+    }
+    50% {
+        border-color: orange;
+    }
+} */
 
 .about-sect-2 {
     display: flex;
@@ -49,6 +145,15 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    transform: translateX(-100%);
+    animation: 1s ease-out forwards slide;
+}
+
+@keyframes slide {
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
 }
 
 .skills-logos {
@@ -65,6 +170,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    transform: translateX(100%);
+    animation: 1s ease-out forwards slide;
 }
 
 .schools-sect {
@@ -109,6 +216,7 @@
     
     .about-sect-2 {
         flex-direction: column;
+        overflow-x: hidden;
     }
 
     .about-sect-2 > * {
@@ -122,6 +230,25 @@
     .school-1, .school-2 {
         flex-basis: 40%;
         padding: 0 1rem;
+    }
+
+    .skills-sect {
+        animation: none;
+        transform: translateX(-100%);
+        opacity: 0;
+        transition: 1s all ease;
+    }
+
+    .edu-sect {
+        animation: none;
+        transform: translateX(100%);
+        opacity: 0;
+        transition: 1s all ease;
+    }
+
+    .skills-sect.active, .edu-sect.active {
+        transform: translateX(0);
+        opacity: 1;
     }
     
 }
