--- a/src/styling/footer.css
+++ b/src/styling/footer.css
@@ -3,9 +3,16 @@
     background-color: rgb(45, 50, 55);
     padding: 1rem;
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
     box-shadow: 2px 0 2px 2px rgba(9, 9, 9, 0.23);
+    color: rgb(255, 252, 244);
 }
+
+/* .footer-links {
+
+} */
 
 .footer svg {
     margin: 0 .75rem;
@@ -15,7 +22,6 @@
 
 .tooltip {
     position: relative;
-    /* border-bottom:1px dashed #000; */
 }
 
 .tooltip::before {
@@ -25,7 +31,7 @@
     /* transform: translateY(-50%); */
     left: 50%;
     margin-left: -45px;
-    bottom: 210%;
+    bottom: 250%;
     width:70px;
     padding:10px;
     border-radius:10px;
